force-app/main/default/objects/TTS_Mentoring_Interest__c/TTS_Mentoring_Interest__c.object-meta.xml
<CustomObject>
    <description>Records a prospective mentor's interest in a mentoring opportunity, including selection status and mentee preference ranking.</description>
    <label>Mentoring Interest</label>
    <nameField>
        <displayFormat>MI-{00000}</displayFormat>
        <label>Mentoring Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentoring Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>