force-app/main/default/objects/TTS_Mentoring_Interest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the contact expressing interest in the mentoring opportunity.</description>
    <inlineHelpText>Select the prospective mentor who expressed interest.</inlineHelpText>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mentoring Interests</relationshipLabel>
    <relationshipName>Mentoring_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>