force-app/main/default/objects/TTS_Mentoring_Interest__c/fields/Mentoring_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Mentoring_Opportunity__c</fullName>
    <description>Associates the mentor's interest with its parent mentoring opportunity.</description>
    <inlineHelpText>Select the mentoring opportunity in which this mentor is interested.</inlineHelpText>
    <label>Mentoring Opportunity</label>
    <referenceTo>TTS_Mentoring_Opportunity__c</referenceTo>
    <relationshipLabel>Mentoring Interests</relationshipLabel>
    <relationshipName>Mentoring_Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>