force-app/main/default/objects/TTS_Mentoring_Interest__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Records the mentee's preference ranking for this prospective mentor, from first to third choice.</description>
    <inlineHelpText>Select 1 for the mentee's first choice, 2 for second choice, or 3 for third choice.</inlineHelpText>
    <label>Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>