force-app/main/default/objects/TTS_Mentoring_Interest__c/fields/Selected_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Selected_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this prospective mentor has been selected for the related opportunity.</description>
    <inlineHelpText>Select this when the mentor has been chosen for the related opportunity.</inlineHelpText>
    <label>Selected Mentor</label>
    <type>Checkbox</type>
</CustomField>