force-app/main/default/objects/TTS_Mentoring_Interest__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Identifies the current outcome or state of the mentor's interest in the opportunity.</description>
    <inlineHelpText>Select whether the mentor is interested, selected, not selected, or has withdrawn.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
                <default>true</default>
                <label>Interested</label>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Withdrawn Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>